...
            onLeadingButtonClick = onSearchLeadingButtonClick,
            onQueryClear = onSearchQueryClear,
            modifier =
                Modifier
                    .fillMaxWidth()
                    .padding(horizontal = animatedPadding)
                    .testTag("map_search_bar"),
            colors =
                SearchBarDefaults.colors(
                    containerColor = MaterialTheme.colorScheme.surfaceBright
                )
        ) {
            LazyColumn(
...
                searchResults.forEach { mapPoint ->
                    item {
                        ListItem(
                            modifier =
                                Modifier
                                    .clickable { onSearchResultClick(mapPoint) }
                                    .testTag("map_search_result"),
                            colors =
                                ListItemDefaults.colors(
                                    containerColor = MaterialTheme.colorScheme.surfaceBright
                                ),
                            headlineContent = { Text(mapPoint.name) },
                            supportingContent =
...
