...
                                Icons.Filled.Close,
                                contentDescription = stringResource(Res.string.clear)
                            )
                        }
                    }
                },
                modifier = Modifier.testTag("map_search_input")
            )
        },
        expanded = expanded,
        onExpandedChange = onExpandedChange,
        modifier = modifier,
        content = searchContent,
...
