...
                        mapPoint = mapUiState.selectedMapPoint!!,
                        modifier =
                            Modifier
                                .fillMaxWidth()
                                .padding(
                                    16.dp
                                ).testTag("map_point_details")
                    )
                }
            },
        scaffoldState =
            rememberBottomSheetScaffoldState(
                bottomSheetState = bottomSheetState
...
